# 3Component_GL

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  conanfile.txt
.github/workflows/: gh-action.yml
batch_script/: .organize_and_run.sh.swp  Autocorr_time.py  Bootstrap_DualStiffness.py  Bootstrap_Energy.py  Bootstrap_Magnetization.py  Bootstrap_PsiDensity.py  LogBoxing.py  Resampling_data.sh  Test_minima_ABterm.py  Trial_run.sh  bin_to_npy.py  organize_and_run.sh  reorganize_after_run.py  submit_run
batch_script/Old/: Autocorr_time.py  Bootstrap_Energy.py  Bootstrap_PsiDensity.py  Check_Thermalization.py  Dual_Stiffness.py  Energy.py  Magnetization.py  Psi_density.py  bin_to_npy.py  txt_to_npy.py
cmake/: BuildDependency.cmake  CompilerFlags.cmake  Fetch_ghcFilesystem.cmake  Fetch_h5pp.cmake  FindOpenMP.cmake  GetNumThreads.cmake  PrintHostInfo.cmake  PrintOptionInfo.cmake  SetupDependenciesConan.cmake  SetupDependenciesFetch.cmake  SetupDependenciesFind.cmake  SetupDependenciesNative.cmake
cmake-modules/external_h5pp/: CMakeLists.txt
cmake/external_ghcFilesystem/: CMakeLists.txt
cmake/external_h5pp/: CMakeLists.txt
source/: .directory  A_final.txt  A_n0.txt  A_n1000.txt  A_n2000.txt  A_n20000.txt  A_n3000.txt  A_n4000.txt  A_n40000.txt  A_n60000.txt  A_n80000.txt  Dual_Stiffness.txt  Energy.txt  Magnetization.txt  Psi_.txt  Psi_density.txt  Psi_final.txt  Psi_n0.txt  Psi_n1000.txt  Psi_n2000.txt  Psi_n20000.txt  Psi_n3000.txt  Psi_n4000.txt  Psi_n40000.txt  Psi_n60000.txt  Psi_n80000.txt  class_tic_toc.cpp  class_tic_toc.h  eigen.h  initialization.cpp  initialization.h  main.cpp  main.h  measures.cpp  measures.h  memory_check.h  montecarlo.cpp  montecarlo.h  o2.h  o3.h  (+3 more)
tests/: CMakeLists.txt  openmp.cpp
